# attic

./: .gitignore  .mcp.json  AGENTS.md  ALTIRRA.md  BEADS-QUICKSTART.md  CHANGELOG.md  CLAUDE.md  Logo-Prompt.txt  Makefile  Package.swift  README.md  empty.state  hello  hello.state  hello2.state  manifest  plan.md  temp.state
.beads/: .gitignore  README.md  config.yaml  dolt-server.activity  interactions.jsonl  issues.jsonl  metadata.json
Attic.xcodeproj/: project.pbxproj
Python/AtticCLI/: .gitignore  TESTING.md  attic.spec  entry_point.py  pyproject.toml
Python/AtticCLI/attic_cli/: __init__.py  cli_client.py  commands.py  display.py  editor.py  help.py  main.py  protocol.py  repl.py  server_launcher.py  terminal_images.py  terminal_osc.py  translator.py  tui_editor.py  web_server.py
Python/AtticCLI/attic_cli/modes/: base.py  basic.py  monitor.py
Python/AtticCLI/tests/: conftest.py  test_display.py  test_help.py  test_repl.py  test_translator.py
Sources/AtticMCP-Python/: pyproject.toml
Sources/AtticMCP-Python/attic_mcp/: cli_client.py  server.py
docs/: 6502_REFERENCE.md  6502_SPECIFICATION.md  ALTIRRA.md  ARCHITECTURE.md  ASSEM_DISSASSEM.md  ATR_FILESYSTEM.md  AUDIT_ATTICCLI.md  BASIC_TOKENIZER.md  CLOJURE_PORT_PLAN.md  FUTURE_IMPLEMENTATION.md  GO_CLI_PORT_PLAN.md  IMPLEMENTATION_PLAN.md  MANUAL_TESTING.md  MCP_USAGE.md  PHASE_14_DESIGN.md  PROTOCOL.md  PYTHON_CLI_PORT_PLAN.md  REPL_COMMANDS.md  SPECIFICATION.md  TESTING.md
emacs/: atari800.el
scripts/: make-app.sh  make-icon.sh
tests/: compare_mcp_servers.py
web-client/: index.html  package.json  (+3 more)
(+202 files in other folders)
