[project]
name = "attic-cli"
version = "0.1.0"
description = "Python CLI for the Attic Atari 800 XL emulator"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1",
    "prompt-toolkit>=3.0",
    "rich>=13.0",
]

[project.scripts]
attic-py = "attic_cli.main:cli"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
